--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header>
+  <img src="assets/tank-management-logo.png">
+  <div>
+    <h1>Tank Management</h1>
+    <h2>Manage your tanks with ease</h2>
+  </div>
+</header>
