--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </ul>
 
   @if (selectedUser) {
-    <app-tasks [name]="selectedUser!.name"/>
+    <app-tasks [user]="selectedUser"/>
   } @else {
     <p id="fallback">Please select a user</p>
   }
