--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     @for (user of users; track user.id) {
       <li>
         <app-user [user]="user"
+                  [isSelected]="user.id === selectedUser?.id"
                   (select)="onSelect($event)"
         />
       </li>
