--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -3,17 +3,15 @@
     <h2>{{ user.name }}'s Tasks</h2>
 
     <menu>
-      <button>Add Task</button>
+      <button (click)="onAddTask(task)">Add Task</button>
     </menu>
   </header>
 
   <ul>
     @for (task of selectedUserTasks; track task.id) {
-<!--      @if (task.userId === user.id) {-->
-        <li>
-          <app-task [task]="task"></app-task>
-        </li>
-<!--      }-->
+      <li>
+        <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
+      </li>
     }
 </ul>
 </section>
