--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,9 +1,13 @@
+@if (isAddingTask) {
+  <app-new-task (cancel)="onCancelAddTask()"/>
+}
+
 <section id="tasks">
   <header>
     <h2>{{ user.name }}'s Tasks</h2>
 
     <menu>
-      <button (click)="onAddTask(task)">Add Task</button>
+      <button (click)="onStartAddTask(task)">Add Task</button>
     </menu>
   </header>
 
