--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if (isAddingTask) {
-  <app-new-task (cancel)="onCancelAddTask()"/>
+  <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
 }
 
 <section id="tasks">
@@ -7,7 +7,7 @@
     <h2>{{ user.name }}'s Tasks</h2>
 
     <menu>
-      <button (click)="onStartAddTask(task)">Add Task</button>
+      <button (click)="onStartAddTask()">Add Task</button>
     </menu>
   </header>
 
