--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div>
+<app-card>
   <button [class.active]="isSelected"  (click)="onSelectUser()">
     <img
       [src]="imagePath"
@@ -6,5 +6,5 @@
     >
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
 
