--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop" (click)="onCancel()"></div>
+<div class="backdrop" (click)="onClose()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form>
@@ -15,8 +15,8 @@
       <input type="date" id="dueDate" name="dueDate" [(ngModel)]="enteredDate">
     </p>
     <p class="actions">
-      <button type="button" (click)="onCancel()">Cancel</button>
-      <button type="submit" (click)="onCreate()">Create</button>
+      <button type="button" (click)="onClose()">Cancel</button>
+      <button type="submit" (click)="onSubmit()">Create</button>
     </p>
   </form>
 </dialog>
